# Python_Basic_Developer

./: .gitignore  Dockerfile  README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: docker-compose.yml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py  pyproject.toml
homework_05/templates/: about.html  base.html  index.html
homework_05/views/: about.py  index.py
homework_06/: Dockerfile  docker-compose.yml  pyproject.toml
homework_06/app/: config.py  fetch_db.py  main.py
homework_06/app/migrations/versions/: 2024_03_26_1406-d08c5dc14ca9_create_table.py
homework_06/app/models/: __init__.py  base.py  products.py
homework_06/app/templates/: base.html  index.html
homework_06/app/templates/products/: add.html  delete.html  (+3 more)
homework_07/: requirements.txt
homework_07/app/: db.sqlite3
homework_07/app/app/: settings.py  urls.py
homework_07/app/products/: views.py
homework_07/app/templates/: base.html
homework_08/: requirements.txt
homework_08/app/app/: settings.py  urls.py
homework_08/app/products/: models.py  views.py
homework_08/app/templates/: base.html
homework_09/: requirements.txt
homework_09/app/app/: settings.py  urls.py
homework_09/app/myauth/: admin.py  forms.py  models.py  views.py
homework_09/app/products/: tests.py  views.py
homework_09/app/templates/: base.html
homework_10/.github/workflows/: pylint.yml  pytest.yml
project_desc/: README.md
testing/test_homework_03/: test_app.py
(+16 files in other folders)
