[tool.poetry]
name = "HomeWork 05"
version = "0.1.0"
description = ""
authors = ["Andrey"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
# poetry install --no-root
# poetry add flask-sqlalchemy
